Changes to be committed: Função listar questões do usuário com o enunciado buscado.
